--- a/PZ17/PZ17.csproj
+++ b/PZ17/PZ17.csproj
@@ -17,7 +17,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.2"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2"/>
-        <PackageReference Include="MySql.Data" Version="8.1.0" />
+        <PackageReference Include="MySqlConnector" Version="2.2.7" />
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
         <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
     </ItemGroup>
