--- a/PZ17/PZ17.csproj
+++ b/PZ17/PZ17.csproj
@@ -19,6 +19,7 @@
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.2"/>
         <PackageReference Include="MySqlConnector" Version="2.2.7" />
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
+        <PackageReference Include="System.Linq.Async" Version="6.0.1" />
         <PackageReference Include="System.Security.Permissions" Version="7.0.0" />
     </ItemGroup>
 </Project>
